Bug 78608 - Repaint problem when using the Zapfino font, on the left side.
Summary: Repaint problem when using the Zapfino font, on the left side.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-12 15:10 UTC by Miklos Vajna
Modified: 2014-05-13 08:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
How it looks like currently. (3.01 KB, image/png)
2014-05-12 15:10 UTC, Miklos Vajna
Details
How it should look like. (3.96 KB, image/png)
2014-05-12 15:10 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2014-05-12 15:10:25 UTC
Created attachment 98932 [details]
How it looks like currently.

This is really similar to bug 78444, once again requires the Zapfino font.

Steps to reproduce:

- open a new document
- set font to Zapfino
- press "j"

Notice that part of the letter is missing. As usual, clicking on the header area works around the missing repaint.
Comment 1 Miklos Vajna 2014-05-12 15:10:44 UTC
Created attachment 98933 [details]
How it should look like.
Comment 2 Commit Notification 2014-05-12 15:27:18 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f7b88a2b03122360b2e60e2afa453603022d28df

fdo#78608 SwTxtFrm::Paint: fix missing repaint problem on the left edge



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Adolfo Jayme Barrientos 2014-05-12 23:42:41 UTC
Awesome fixes, thank you very much! This problem bugged me for years. (A libre font to reproduce these problems is Libre Baskerville Italic, BTW.)
Comment 4 Miklos Vajna 2014-05-13 08:04:56 UTC
Thanks for the free alternative hint, I felt bad about mentioning a commercial font for the description, but couldn't quickly find a free one. :-)