fdo#78608 SwTxtFrm::Paint: fix missing repaint problem on the left edge

Change-Id: Iba66a82e4a92a0afe1ad923cf4e0922730bd03de